fixes footer on mobile layout

--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -1,9 +1,23 @@
 body {
   margin: 0;
-  padding-bottom: 178.53px;
+  padding-bottom: 17rem;
   font-family: var(--sans-serif);
   color: #333;
   outline: none !important;
+}
+
+.footer {
+  height: 17rem;
+}
+
+@media only screen and (min-width: 45em) {
+  body {
+    padding-bottom: 14rem;
+  }
+
+  .footer {
+    height: 14rem;
+  }
 }
 
 textarea {
